NIJ Upgrade commons libs. Use docker-compose.